[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/second-member.png" type="Texture" id=1]
[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Dialog.gd" type="Script" id=3]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[node name="Dialog" type="Control"]
margin_left = 9.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.47451, 0.431373, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="VBoxContainer"]
margin_right = 995.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/DialogBox"]
anchor_right = 1.0
margin_bottom = 364.0
color = Color( 0.243137, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DialogBox"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogImage" type="TextureRect" parent="VBoxContainer/DialogBox/HBoxContainer"]
margin_right = 211.0
margin_bottom = 354.0
texture = ExtResource( 1 )
stretch_mode = 1
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="VBoxContainer/DialogBox/HBoxContainer"]
margin_left = 215.0
margin_right = 995.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.945098, 0.917647, 0.917647, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOptions" type="Control" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 995.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/PlayerOptions"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
color = Color( 0.25098, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PlayerOptions"]
anchor_top = 0.371
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 7.0
margin_right = -5.0
margin_bottom = -5.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUI" parent="." instance=ExtResource( 4 )]
